--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Welcome to my web page</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam dicta qui quas nemo, repudiandae, possimus ratione, aliquid pariatur eum aspernatur architecto necessitatibus numquam quaerat saepe non. Eum ipsum sit ipsa.</p>
+    <h2> Thank You <h2>
+    <h3> Visit again <h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam dicta qui quas nemo, <br>repudiandae, possimus ratione, aliquid pariatur eum aspernatur architecto <br>necessitatibus numquam quaerat saepe non. Eum ipsum sit ipsa.</p>
 </body>
 </html>
